Fixed equals sign staying in the display after calculation + text overflow bug

--- a/style.css
+++ b/style.css
@@ -48,6 +48,9 @@ h1 {
   height: 75px;
   width: 335px;
   padding: 10px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .calculator {
